--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,8 +5,8 @@ on:
     branches:
       - master
     paths:
-      - **/*.py
-      - .github/workflows/release.yaml
+      - '**/*.py'
+      - '.github/workflows/release.yaml'
 
 jobs:
   release:
